--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -1,9 +1,9 @@
-.copy-mailto a {
+a.copy-mailto {
   position: relative;
   text-decoration: none;
 }
 
-.copy-mailto a:after {
+a.copy-mailto:after {
   transition: opacity 0.5s cubic-bezier(0.0, 0.0, 0.2, 1), transform 0.5s cubic-bezier(0.0, 0.0, 0.2, 1);
   opacity: 0;
   position: absolute;
@@ -25,11 +25,11 @@
   color: black;
 }
 
-.copy-mailto a:hover {
+a.copy-mailto:hover {
   text-decoration: underline;
 }
 
-.copy-mailto a.is-copied:after {
+a.copy-mailto.is-copied:after {
   opacity: 1;
   transform: rotate(-10deg);
 }
