--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -3,33 +3,33 @@ a.copy-mailto {
   text-decoration: none;
 }
 
-a.copy-mailto:after {
-  transition: opacity 0.5s cubic-bezier(0.0, 0.0, 0.2, 1), transform 0.5s cubic-bezier(0.0, 0.0, 0.2, 1);
-  opacity: 0;
-  position: absolute;
-  left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto;
-  max-width: fit-content; 
-  top: 0;
-  transform: rotate(0);
-  letter-spacing: 1px;
-  font-weight: 700;
-  font-size: 1rem;
-  text-transform: uppercase;
-  content: "Copied!";
-  display: inline-block;
-  background: white;
-  padding: 0.125rem 0.25rem;
-  color: black;
+a.copy-mailto .tooltiptext {
+    top: 1px;
+    left: 50%;
+    opacity: 0;
+	margin-bottom: -5px;
+	transform: translate(-50%, -120%);
+	position: absolute;
+	visibility: hidden;
+	width: auto;
+	white-space: nowrap;
+	font-size: 12px;
+	background-color: black;
+	color: white;
+	padding: 2px 6px;
+    border-radius: 2px;
+    transition: opacity 0.3s;
+}
+
+a.copy-mailto .tooltiptext::after {
+  content: "";
 }
 
 a.copy-mailto:hover {
   text-decoration: underline;
 }
 
-a.copy-mailto.is-copied:after {
-  opacity: 1;
-  transform: rotate(-10deg);
+a.copy-mailto:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
